# entice-bot

./: .gitignore  Cargo.toml
migrations/2017-12-16-045302_create_chat/: up.sql
src/: commands.rs  entice.rs  errors.rs  main.rs  models.rs  schema.rs  settings.rs  stream.rs  templates.rs
