[package]
name = "entice-bot"
version = "0.1.0"
authors = ["Sam Wilson <tecywiz121@hotmail.com>"]

[dependencies]
telebot = "0.2.5"
tokio-core = "0.1.10"
futures = "0.1.17"
clap = "2.29.0"
config = "0.7.0"
error-chain = "0.11.0"
serde = "1.0.0"
serde_derive = "1.0.0"
serde_json = "1.0.8"
erased-serde = "0.3.3"
slog = "2.1.1"
slog-term = "2.3.0"
slog-async = "2.2.0"
chrono = "0.4.0"
handlebars = "0.30.0-beta.4"

[dependencies.lazy_static]
version = "1.0.0"
features = ["nightly"]

[dependencies.ctrlc]
version = "3.0.3"
features = ["termination"]

[dependencies.diesel]
version = "1.0.0-beta1"
features = ["postgres", "chrono"]

[patch.crates-io]
telebot = { path = "/home/hellfire/Code/telebot" }
